<resources>
    <string name="app_name">DawnIsland</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="from_the_future">来自未来</string>
    <string name="just_now">刚刚</string>
    <plurals name="some_minutes_ago">
        <item quantity="other">%d 分钟前</item>
    </plurals>
    <plurals name="some_hours_ago">
        <item quantity="other">%d 小时前</item>
    </plurals>
    <string name="yesterday">昨天</string>
    <string name="some_days_ago">%d 天前</string>

    <plurals name="second">
        <item quantity="other">秒</item>
    </plurals>
    <plurals name="minute">
        <item quantity="other">分</item>
    </plurals>
    <plurals name="hour">
        <item quantity="other">时</item>
    </plurals>
    <plurals name="day">
        <item quantity="other">天</item>
    </plurals>
    <plurals name="year">
        <item quantity="other">年</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title_reply_state"><![CDATA[回复 > No.]]></string>
    <string name="full_screen_button">full_screen_button</string>
    <string name="expand_user_info_input">expand_user_info_input</string>
    <string name="choose_image_buttom">choose_image_buttom</string>
    <string name="input_text_hint">在这里输入文字</string>
    <string name="open_doodle">open_doodle</string>
    <string name="example_series_id">14332233</string>
    <string name="send_reply_button">send_reply_button</string>
    <string name="name_text_view_hint">名称</string>
    <string name="title_text_view_hint">标题</string>
    <string name="email_text_view_hint">邮箱</string>
    <string name="preview_image_content_description">this is a preview of image which will be sent</string>
    <string name="example_cookie">Wdnmd12</string>
    <string name="need_read_storage_permission">我莫得权限QAQ</string>
    <string name="need_write_storage_permission">我莫得权限QAQ</string>
    <string name="need_take_picture_permission">我莫得拍照权限QAQ</string>
    <string name="post_title_new_thread_state">发布新串</string>


</resources>
